tests/rosetta/out/cpp/a+b.cpp
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
#include <iostream>

auto __mochi_main() {
  auto a = int(input());
  auto b = int(input());
  std::cout << (a + b) << std::endl;
}

int main() {
  __mochi_main();
  return 0;
}
